<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.kekwy.iarnet</groupId>
    <artifactId>iarnet</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>iarnet</name>
    <description>iarnet parent project</description>

    <modules>
        <module>iarnet-application</module>
        <module>iarnet-server</module>
        <module>iarnet-fabric</module>
        <module>iarnet-common</module>
        <module>iarnet-provider</module>
        <module>iarnet-execution</module>
        <module>iarnet-cli</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>17</java.version>
        <!-- 1. 源码编码 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 2. 资源文件编码 -->
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <!-- 3. Maven 编译编码（最关键！） -->
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <!-- 4. 报告编码 -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <protobuf.version>3.25.5</protobuf.version>
        <grpc.version>1.64.0</grpc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- 子模块依赖可在此统一管理 -->
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
